--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 
     <groupId>KoffieApp</groupId>
     <artifactId>KoffieApp</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <build>
@@ -78,6 +77,7 @@
             <version>4.3.10.Final</version>
         </dependency>
 
+        <!-- junit testing framework -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
