--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,12 @@
             <version>LATEST</version>
         </dependency>
 
+        <!--
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.3.10.Final</version>
-        </dependency>
+        </dependency> -->
 
         <!-- junit testing framework -->
         <dependency>
