--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,25 @@
             </plugin>
 
              <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-jar-plugin</artifactId>
-                 <version>3.1.0</version>
+                 <artifactId>maven-assembly-plugin</artifactId>
+                 <executions>
+                     <execution>
+                         <phase>package</phase>
+                         <goals>
+                             <goal>single</goal>
+                         </goals>
+                     </execution>
+                 </executions>
                  <configuration>
                      <archive>
                          <manifest>
                              <addClasspath>true</addClasspath>
-                             <mainClass>KoffieAppRESTServer.RestServer</mainClass>
+                             <mainClass>com.oracle.deploy.KoffieAppRESTServer.RestServer</mainClass>
                          </manifest>
                      </archive>
+                     <descriptorRefs>
+                         <descriptorRef>jar-with-dependencies</descriptorRef>
+                     </descriptorRefs>
                  </configuration>
              </plugin>
         </plugins>
